--- a/Demo_Clean/Presentation/appsettings.json
+++ b/Demo_Clean/Presentation/appsettings.json
@@ -1,9 +1,11 @@
 {
+  "ConnectionStrings": {
+    //"UniversityDBConnection": "Server=.;Database=UniversityDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "UniversityDBConnection": "Server=Localhost;Database=UniversityDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Warning"
     }
   },
   "AllowedHosts": "*"
